--- a/style.css
+++ b/style.css
@@ -6,10 +6,29 @@ body {
 }
 
 header {
-    background: #007bff;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    padding-left: 2rem;
+}
+
+header nav {
+    display: flex;
+    gap: 20px; 
+}
+
+header nav a {
+    text-decoration: none;
     color: white;
-    padding: 20px;
-    text-align: center;
+    font-weight: bold;
+}
+
+
+header h1 {
+    margin: 0;
+    color: white;
 }
 
 main {
