--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 30px;
     padding-left: 2rem;
 }
 
