--- a/style.css
+++ b/style.css
@@ -148,3 +148,10 @@ h2 {
     margin-left: auto;
     margin-right: auto;
 }
+.video-container {
+    display: block;
+    margin: 0, auto; 
+    padding: 10px; 
+    max-width: 80%; 
+    margin-left: 200px; 
+}
