--- a/style.css
+++ b/style.css
@@ -155,3 +155,73 @@ h2 {
     max-width: 80%; 
     margin-left: 200px; 
 }
+.about-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin: auto;
+}
+
+.mission {
+    width: 50%;
+}
+
+.group-picture {
+    width: 45%;
+    text-align: right;
+}
+
+.group-picture img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.services-container h2 {
+    text-align: center; 
+}
+
+.services-list {
+    list-style-type: none; 
+    padding: 0; 
+}
+
+.services-list li {
+    padding: 10px; 
+    border-bottom: 1px solid #ddd; 
+}
+
+
+.services-container,
+.team-container {
+    width: 100%; 
+    max-width: 1200px; 
+    background-color: white;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    margin-top: 20px; 
+}
+.team-members {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-around;
+}
+
+.team-member {
+    width: 45%; 
+    text-align: center; 
+    margin-bottom: 20px; 
+
+.team-member img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    max-width: 150px;
+}
