--- a/style.css
+++ b/style.css
@@ -162,9 +162,9 @@ h2 {
     align-items: center;
     width: 95%;
     
-    background-color: white;
-    padding: 20px;
+    /*background-color: white; */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
     border-radius: 10px;
     margin: auto;
 }
@@ -202,9 +202,10 @@ h2 {
 .services-container,
 .team-container {
     width: 95%; 
-    background-color: white;
-    padding: 20px;
+    /*background-color: white; */
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+
     border-radius: 10px;
     margin-top: 20px; 
     margin: auto;
