--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ h2 {
 }
 .team-member img {
     width: 100%;
-    height: auto;
+    height: 100%;
     border-radius: 50%;
     max-width: 250px;
     max-height: 250px;
