--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,12 @@ header h1 {
   margin: 0;
   color: rgb(55, 45, 45);
 }
+.h21 {
+  margin: 0;
+  font-size: 50px;
+  padding-bottom: 10px;
+}
+
 
 main {
   padding: 20px;
