--- a/styles.css
+++ b/styles.css
@@ -458,4 +458,14 @@ input {
   vertical-align: middle; /* Aligns the image with the text */
 }
 
+.user-info-container {
+  border: 2px solid #dd1313; /* Change color as needed */
+  border-radius: 10px; /* Rounded corners */
+  padding: 20px; /* Space inside the container */
+  background-color: #f9f9f9; /* Light background color */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Shadow effect */
+  margin-bottom: 20px; /* Space below the container */
+}
+
+
 
